few spacing adjustments

--- a/assets/stylesheets/landing-page/landing.scss
+++ b/assets/stylesheets/landing-page/landing.scss
@@ -269,19 +269,19 @@ img.responsive-image {
 }
 
 i.md-18 {
-  font-size: $md-18;
+  font-size: $eos-md-18;
 }
 
 i.md-24 {
-  font-size: $l;
+  font-size: $eos-md-24;
 }
 
 i.md-36 {
-  font-size: $md-36;
+  font-size: $eos-md-36;
 }
 
 i.md-48 {
-  font-size: $xxl;
+  font-size: $eos-md-48;
 }
 
 p {
