--- a/assets/stylesheets/landing-page/base/variables/spacings.scss
+++ b/assets/stylesheets/landing-page/base/variables/spacings.scss
@@ -7,8 +7,10 @@
 */
 $font-size-body: 14px;
 $space-base: 16px;
-$md-18: 18px;
-$md-36: 36px;
+$eos-md-18: 18px;
+$eos-md-24: 24px;
+$eos-md-36: 36px;
+$eos-md-48: 48px;
 
 $m: $space-base; // this is the regular size = 16px
 $xs: $m / 4; // = 4px
