changed styling for upload option

--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -6,8 +6,8 @@ block content
     p Generating font files...
   .container.icons-container
     h3 Click on Icons to select them
-    p To continue building an old font, upload #[i icons-config.json] file 
-      a.upload-file-hyperlink.link(data-toggle='modal', data-target='#myModal')  here.
+    p To continue building an old font, upload #[i icons-config.json]
+      i.upload-file-hyperlink.link(data-toggle='modal', data-target='#myModal')  file here.
     .extended-version-wrap
       input.searchbar.curved(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
     .icons-picker-icons-container.js-extended-icons-list
