--- a/views/pages/docs.pug
+++ b/views/pages/docs.pug
@@ -7,45 +7,43 @@ block content
       h2
         | Free. Open source. Vector and pixel-perfect icons. The iconic font your product needs.
   .container
-    section.mb-5.pb-2
-      h1.font-weight-bold.mb-3.mt-3.border-bottom EOS iconic font
-      |
+    section.mb-5.mt-5
+      h2.font-weight-bold.mb-3.border-bottom
+        | Installing EOS icons
       p
-        | Demo:
-        a(href='https://eos-icons.eosdesignsystem.com/', target='_blank')  https://eos-icons.eosdesignsystem.com/
-      |
-      p
-        | This is the iconic font used in the EOS Design System. The official SUSE Linux Design System, and for all open source projects to use and re-use.
-      |
-      p
-        | To view the EOS Design System project check gitlab
-        a(href=' https://gitlab.com/SUSE-UIUX/eos', target='_blank')  https://gitlab.com/SUSE-UIUX/eos
-      |
-    section.mb-5.pb-2
-      h2.mid.font-weight-bold.mb-3.border-bottom Installing with npm
+        | There are several options for you to use EOS icons in your product:
+    section.mb-5
+      h3.font-weight-bold.mb-3.border-bottom Installing with npm
       |
       p.command npm install eos-icons --save
       |
-    section.mb-5.pb-2
-      h2.mid.font-weight-bold.mb-3.mt-3.border-bottom With our CDN
+    section.mb-5
+      h3.font-weight-bold.mb-3.mt-3.border-bottom With our CDN
       |
       p
         | For EOS set:
         a(href='https://cdn.jsdelivr.net/npm/eos-icons/dist/css/eos-icons.css', target='_blank')  https://cdn.jsdelivr.net/npm/eos-icons/dist/css/eos-icons.css
+      p.command &ltlink rel="stylesheet" href="https://cdn.jsdelivr.net/npm/eos-icons/dist/css/eos-icons.css"&gt
+      p
       p
         | For Extended EOS set:
         a(href='https://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css', target='_blank')  https://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css
+      p.command &ltlink rel="stylesheet" href="ttps://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css"&gt
+      p
       p.d-inline  import them in your
       p.command &lt;head&gt;
       |  tag as
       p.command link:css
       |  and paste the link.
       p
-      p
-        | To download the zip file of /dist folder click
-        a(href='https://gitlab.com/SUSE-UIUX/eos-icons/-/archive/master/eos-icons-master.zip?path=dist', target='_blank')  here
     section.mb-5.pb-2
-      h2.mid.font-weight-bold.mb-3.mt-3.border-bottom Using EOS icons in your projects
+      h3.font-weight-bold.mb-3.mt-3.border-bottom or Download EOS as a zip file
+      p.d-inline To download the zip file of
+      p.command /dist
+      |  folder click
+      a(href='https://gitlab.com/SUSE-UIUX/eos-icons/-/archive/master/eos-icons-master.zip?path=dist', target='_blank')  here
+    section.mb-5.pb-2
+      h2.font-weight-bold.mb-3.mt-3.border-bottom Using EOS icons in your projects
       |
       p
         | Just like in any other iconic font, you need to add the Fonts and CSS files in your project:
@@ -73,7 +71,7 @@ block content
         a(href='https://eos-icons.eosdesignsystem.com/', target='_blank')  https://eos-icons.eosdesignsystem.com/
         | .
     section.mb-5.pb-2
-      h2.mid.font-weight-bold.mb-3.border-bottom Using animated icons
+      h2.font-weight-bold.mb-3.border-bottom Using animated icons
       p
         | The animated EOS icons are built using CSS animations. To implement them you don&apos;t need ligatures but classes instead.
       p
@@ -85,7 +83,7 @@ block content
         a(href='https://eos-icons.eosdesignsystem.com/', target='_blank')  demo page
         | . Click on the icon you want to use to see the code snippet.
     section.mb-5.pb-2
-      h2.mid.font-weight-bold.mb-3.border-bottom EOS extended version with Material Design
+      h2.font-weight-bold.mb-3.border-bottom EOS extended version with Material Design
       p
         | Since EOS icons are designed following the
         a(href='https://material.io/design/iconography/system-icons.html', target='_blank')  Material Design guidelines
@@ -118,7 +116,7 @@ block content
         br
         | &lt;i class=&quot;eos-icons&quot;&gt;bluetooth_disabled&lt;/i&gt;
     section.mb-5.pb-2
-      h2.mid.font-weight-bold.mb-3.border-bottom Our recommended sizes
+      h2.font-weight-bold.mb-3.border-bottom Our recommended sizes
       p
         | Both MD icons and EOS icons have been designed to work and look perfect at: 18px, 24px, 36px, and 48px. These are the recommended sizes for icons in all SUSE - DEVELOPMENT UIs.
       p
@@ -191,54 +189,5 @@ block content
           br
           | $eos-md-48: 48px;
     section.mb-5.pb-2
-      h2.mid.font-weight-bold.mb-3.border-bottom Adding your icons to the iconic font
-      p
-        | If you want to create your own icons and add them to this library, follow the next steps:
-      h4.font-weight-bold What do you need to build the fonts locally?
-      p
-        | This project uses Webfont for Grunt to build. More info about the project:
-        a(href='https://www.npmjs.com/package/grunt-webfont', target='_blank')  https://www.npmjs.com/package/grunt-webfont
-      p
-        | We use Fontforge to render our icons since the quality is better than using plain node, and it supports Ligatures.
-        | Our icons follow Google Material Icons guidelines one-to-one. This is the main reason for us to use ligatures as well. We made a perfectly compatible icon font for those already using MD icons.
-        | If you want to know more about all the standards we follow for the EOS, visit our public wiki, which is our main internal guideline:
-        a(href='https://gitlab.com/SUSE-UIUX/eos/wikis/home', target='_blank')  https://gitlab.com/SUSE-UIUX/eos/wikis/home
-      h4.font-weight-bold Installing dependencies
-      ul
-        li.mb-3 Clone this repository and go to the folder:
-        |
-        code.mb-3.codes
-          | git clone git@gitlab.com:SUSE-UIUX/eos-icons.git
-          br
-          | cd eos-icons
-        li.mb-3 Make sure you have NODE.js installed, if not:
-        code.mb-3.codes brew install node
-        li.mb-3 Install Grunt globally:
-        code.mb-3.codes npm install -g grunt-cli.mb-3
-        li Install npm dependencies:
-        code.mb-3.codes npm install
-        p Install the dependencies:
-        li.mb-3 OSX
-        code.mb-3.codes brew install ttfautohint fontforge --with-python
-        p You will need to have Xcode installed. First install the command line tool:
-        code.mb-3.codes xcode-select --install
-        p And then download the latest version from:
-        a(href='https://developer.apple.com/xcode/', target='_blank') https://developer.apple.com/xcode/
-        li.mb-3.mt-3 Linux
-        code.mb-3.codes sudo apt-get install fontforge ttfautohint
-      h4.font-weight-bold Design and add your SVG icons
-      p.d-inline Add your icons into the
-      p.command svg/
-      |  folder. All our icons have been designed with Illustrator, but designing with any tool like Inkscape will work just fine, just make sure the exported SVG code is as clean as possible.
-      p
-      p
-        | SVG file names with more than one word in it should not have a minus character separating the words (e.g.: some-name.svg), instead, use an underscore (e.g.: some_name.svg). The use of spaces in the filename also creates conflicts in the resulting iconic font.
-      p Then all you need to do, is run
-      code.mb-3.codes grunt
-      p.d-inline This will build the assets under the
-      p.command dist/
-      |  folder.
-      p
-      p
-        | We recommended sizes MD icons use: 18, 24, 36, and 48 pixels, plus 16px which is our minimum allowed size at EOS Design System.
-      strong.mb-4 That&apos;s it!!.. easy as pie
+      p.mb-3 EOS icons is open source. Go to our Gitlab repository to find out more :
+        a(href='https://eos-icons.eosdesignsystem.com', target='_blank')  https://eos-icons.eosdesignsystem.com
