remove old text

--- a/views/pages/docs.pug
+++ b/views/pages/docs.pug
@@ -119,7 +119,7 @@ block content
     section.mb-5.pb-2
       h2.font-weight-bold.mb-3.border-bottom Our recommended sizes
       p
-        | Both MD icons and EOS icons have been designed to work and look perfect at: 18px, 24px, 36px, and 48px. These are the recommended sizes for icons in all SUSE - DEVELOPMENT UIs.
+        | Both MD icons and EOS icons have been designed to work and look perfect at: 18px, 24px, 36px, and 48px.
       p
         | In order to be compliant, follow MD icons class names to size both MD icons and EOS icons:
       h4.font-weight-bold Implementation examples
