--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -1,22 +1,27 @@
 extends ../layouts/icons-picker-layout
 
 block content
-  .icons-picker-loading
-    i.eos-icons.eos-icon-loading
-    p Generating font files...
-  .container.icons-container
-    h3 Click on Icons to select them
-    p To continue building an old font, upload #[i icons-config.json]
+  // header ----------------------------------------------------------------------------------------
+  .header
+    .content.container.text-white.img-fluid(alt='img-responsive')
+      h2
+        | Click on Icons to select them
+      p To continue building an old font, upload #[i icons-config.json]
       i.upload-file-hyperlink.link(data-toggle='modal', data-target='#myModal')  file here.
-    .extended-version-wrap
-      input.searchbar.curved(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
-    .icons-picker-icons-container.js-extended-icons-list
-      .icons-item.icons-item-static-icons.js-extended-icons-item(onclick='addSelection(this)', data-name='action_chains')
-        i.eos-icons.js-eos-icons
-        br
-        .js-eos-icon-name
-    #icons-animated
-      h3 Animated icons
+  // -----------------------------------------------------------------------------------------------
+  ul#myTab.nav.nav-tabs.bg-jumbotron.pl-3.pr-3.pt-3.pb-2(role='tablist')
+    li.nav-item
+      a#profile-tab.nav-link.active(data-toggle='tab', href='#profile', role='tab', aria-controls='profile', aria-selected='false') Extended EOS Icons Set
+    input.searchbar.curved(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
+  #myTabContent.tab-content
+    #profile.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='profile-tab')
+      #extended-icons.js-extended-icons-list.pl-4.pr-4.pt-5
+        .icons-item.js-extended-icons-item
+          i.eos-icons.js-eos-icons
+          br
+          .js-eos-icon-name
+    #icons-animated.pl-4.pr-4
+      h3.pl-5.pr-4.pb-4.pt-3 Animated icons
       .icons-item(data-name='loading')
         i.eos-icons.eos-icon-loading
         br
@@ -25,13 +30,6 @@ block content
         i#eos-icon-installing.eos-icons.eos-icon-installing.md-48
         br
         | installing
-  footer
-    .container.icons-picker-footer
-      h6.select-all-icons(onclick='selectAll()') Select all #[i.eos-icons select_all]
-      h6.deselect-all-icons(onclick='deselectAll()') Deselect all #[i.eos-icons clear]
-      .generate-div
-        h6.js-icons-count 0 icons selected.
-        button.btn.btn-default(type='submit', onclick='generate()') Generate font
   #myModal.config-file-modal.modal.fade(role='dialog')
     .modal-dialog
       // Modal content
