--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -6,17 +6,17 @@ block content
     .content.container.text-white.img-fluid(alt='img-responsive')
       h2
         | Click on Icons to select them
-      p To continue building an old font, upload #[i icons-config.json]
+      p To continue building an old font, upload #[i icons-config.json] 
       i.upload-file-hyperlink.link(data-toggle='modal', data-target='#myModal')  file here.
   // -----------------------------------------------------------------------------------------------
   ul#myTab.nav.nav-tabs.bg-jumbotron.pl-3.pr-3.pt-3.pb-2(role='tablist')
     li.nav-item
       a#profile-tab.nav-link.active(data-toggle='tab', href='#profile', role='tab', aria-controls='profile', aria-selected='false') Extended EOS Icons Set
     input.searchbar.curved(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
-  #myTabContent.tab-content
+  #myTabContent.tab-content.icons-container
     #profile.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='profile-tab')
       #extended-icons.js-extended-icons-list.pl-4.pr-4.pt-5
-        .icons-item.js-extended-icons-item
+        .icons-item.icons-item-static-icons.js-extended-icons-item(onclick='addSelection(this)', data-name='action_chains')
           i.eos-icons.js-eos-icons
           br
           .js-eos-icon-name
@@ -44,3 +44,11 @@ block content
             |  in the folder of your previous custom EOS font.
           input#configFile(type='file')
           button.btn.upload-btn(type='button', onclick='prevSelection()', data-dismiss='modal') Upload File
+  // footer
+  footer
+    .container.icons-picker-footer
+      h6.select-all-icons(onclick='selectAll()') Select all #[i.eos-icons select_all]
+      h6.deselect-all-icons(onclick='deselectAll()') Deselect all #[i.eos-icons clear]
+      .generate-div
+        h6.js-icons-count 0 icons selected.
+        button.btn.btn-default(type='submit', onclick='generate()') Generate font
