some styling changes

--- a/assets/stylesheets/landing-page/base/variables/colors.scss
+++ b/assets/stylesheets/landing-page/base/variables/colors.scss
@@ -7,7 +7,7 @@ $dark-gray: #5f5f5f;
 $dark-black: #333;
 $primary-light: #fe673a;
 $dark-red: #d60015;
-$hyper-link-color: #008ACF;
+$hyper-link-color: #0285c4;
 $hyper-link-hover-color: #15578f;
 $command: #c0341d;
 $codes: #505050;
