--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -3,7 +3,7 @@ extends ../layouts/icons-picker-layout
 block content
   // header ----------------------------------------------------------------------------------------
   .header
-    .content.container.text-white.img-fluid(alt='img-responsive')
+    .content.icons-container.text-white.img-fluid(alt='img-responsive')
       h2
         | Click on Icons to select them
       p To continue building an old font, upload #[i icons-config.json] 
@@ -13,7 +13,7 @@ block content
     li.nav-item
       a#profile-tab.nav-link.active(data-toggle='tab', href='#profile', role='tab', aria-controls='profile', aria-selected='false') Extended EOS Icons Set
     input.searchbar.curved(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
-  #myTabContent.tab-content.icons-container
+  #myTabContent.tab-content
     #profile.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='profile-tab')
       #extended-icons.js-extended-icons-list.pl-4.pr-4.pt-5
         .icons-item.icons-item-static-icons.js-extended-icons-item(onclick='addSelection(this)', data-name='action_chains')
