some styling changes

--- a/views/pages/thankyou-page.pug
+++ b/views/pages/thankyou-page.pug
@@ -1,7 +1,7 @@
 extends ../layouts/default
 
 block content
-  .container.icons-container.thankyou-page-container
+  .container.thankyou-page-container
     h2 Thank you for using EOS!
     img.js-thankyou-img(src='assets/images/eos-bunny.png', alt='EOS Bunny', onload='autoDownloadFont()')
     p.js-download-timer 
