added back loading animation

--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -1,6 +1,11 @@
 extends ../layouts/icons-picker-layout
 
 block content
+  // loading animation
+  .icons-picker-loading
+    i.eos-icons.eos-icon-loading
+    p Generating font files...
+
   // header ----------------------------------------------------------------------------------------
   .header
     .content.icons-container.text-white.img-fluid(alt='img-responsive')
