--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -34,7 +34,7 @@ block content
   .jumbotron.jumbotron-fluid.mb-lg-0.bg-jumbotron.pb-lg-0
     .container
       h1.text-center.pb-lg-5.display-4 Lots of Icons to choose from
-      img.d-inline-block.pb-lg-5.img-fluid(src='assets/images/landing/icons.png')
+      img.img-fluid.landing-icons-demo(src='assets/images/landing/icons.png')
   // CSS animated Icons ----------------------------------------------------------------------------
   .text-center.bg-jumbotron
     h1.text-center.pb-lg-5.pt-lg-5.display-4 CSS Animated Icons
