--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -125,10 +125,10 @@ block content
       .d-inline-block.ml-5
         img.d-inline-block.plane-img(src='assets/images/landing/plane.png')
     // Contributors section ---------------------------------------------------------------------------
-    .container
+    .container.padding-vertical-lg
       h3.text-center
         | Special thanks to all the superheroes that made it happen
-      .container-flex-row.text-center
+      .container-flex-row.text-center.padding-top-md
         a(title='Cynthia Sanchez on twitter', href='https://twitter.com/cyntss', target='_blank')
           img.contributor-img(src='assets/images/landing/image1.png')
           p.text-decoration-none.text-dark Cynthia Sanchez
