--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -26,7 +26,7 @@ block content
         a.btn.btn-dark(href='https://gitlab.com/SUSE-UIUX/eos-icons', target='_blank') Contribute to EOS Icons
   .gray-bg
     // Lot of icons to choose from -------------------------------------------------------------------
-    .container
+    .container.padding-top-md
       h1.text-center.pb-lg-5.display-4 Lots of Icons to choose from
       img.img-fluid.landing-icons-demo(src='assets/images/landing/icons.png')
     // CSS animated Icons ----------------------------------------------------------------------------
@@ -55,7 +55,7 @@ block content
             | reflows and redraws unlike modifying elements via
             | Javascript would.
     // A pixel perfect design process -----------------------------------------------------------------
-    .container
+    .container.padding-vertical-lg
       h1.text-center.pb-lg-5.pt-lg-5.display-4 A pixel-perfect design process
       .row
         .col-lg-6
