--- a/assets/stylesheets/landing-page/layout/template.scss
+++ b/assets/stylesheets/landing-page/layout/template.scss
@@ -1,6 +1,7 @@
 /* Template styles
    ========================================================================== */
 body {
+  font-size: 16px;
   font-weight: 400;
   margin: 0;
   max-width: 100%;
