--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -6,171 +6,168 @@ block content
     .content.container.text-white.img-fluid(alt='img-responsive')
       h2
         | Free. Open source. Vector and pixel-perfect icons. The iconic font your product needs.
-  // Open source DNA -------------------------------------------------------------------------------
-  .container.text-centre
-    .row.mx-auto
-      h1.display-4.d-inline-block.pr-lg-5.pt-lg-5.pb-lg-5.pl-lg-5
-        | OPEN
-        br
-        | SOURCE
-        br
-        | DNA
-      .fixed-rectangle-inverse.rounded.mt-lg-5.ml-lg-5.mr-lg-5
-      .col.py-3.px-lg-5.pt-lg-5
-        p
-          | EOS icons offers an easily customizable icons for any company or 
-          | project to use. We've created guides that are adjustable and applicable to any open source project.
-          | We appreciate your contribution to EOS icons and look
-          | forward to hearing more about how it helps your
-          | products and projects
-        a.btn.btn-dark(href='https://gitlab.com/SUSE-UIUX/eos-icons', target='_blank') Contribute to EOS Icons
-  .gray-bg
-    // Lot of icons to choose from -------------------------------------------------------------------
-    .container.padding-top-md
-      h1.text-center.pb-lg-5.display-4 Lots of Icons to choose from
-      img.img-fluid.landing-icons-demo(src='assets/images/landing/icons.png')
-    // CSS animated Icons ----------------------------------------------------------------------------
-    .text-center.container
-      h1.text-center.pb-lg-5.pt-lg-5.display-4 CSS Animated Icons
-      .row
-        .col-lg-6
-          img.animated-image.img-fluid(src='assets/images/landing/monitor.png')
-          .animated-icons.mt-lg-5.pt-lg-5.ml-lg-4
-            .icons-item(data-name='loading')
-              i.eos-icons.eos-icon-loading
-              br
-              | loading
-            .icons-item(data-name='in')
-              i#eos-icon-installing.eos-icons.eos-icon-installing.md-48
-              br
-              | installing
-        .col-lg-6.text-left
-          p
-            | EOS icons offers easily customisable animated icons. These
-            | icons use only CSS animations and nothing more, which make
-            | things a lot easier when using these icons in your own projects.
-            | Also, they run on the GPU so the frame rate is much higher
-            | than that of Javascript animations. When it comes to CSS
-            | animations they also have the advantage of not causing
-            | reflows and redraws unlike modifying elements via
-            | Javascript would.
-    // A pixel perfect design process -----------------------------------------------------------------
-    .container.padding-vertical-lg
-      h1.text-center.pb-lg-5.pt-lg-5.display-4 A pixel-perfect design process
-      .row
-        .col-lg-6
-          .row
-            .col-4
-              ol.text-left.pull-right
-                li
-                  | Stroke terminal
-                li
-                  | Corner
-                li
-                  | Counter area
-                li
-                  | Stroke
-                li
-                  | Counter stroke
-                li
-                  | Bounding area
-            .col-8
-              img(src='assets/images/landing/material-icons.png')
-        .col-lg-6
-          p.d-inline-block.text-left
-            | EOS icons were made to coexist with material icons. We
-            | carefully follow material design guidelines which makes
-            | EOS icons indistinguishable from material Icons.
-            | Material Design defines the qualities that can be
-            | expressed by UI regions, surfaces, and components.
-            | Design and strategize how your app is built using
-            | foundations that address design from both a broad
-            | and detailed perspective.
+  .landing-page
+    // Open source DNA -------------------------------------------------------------------------------
+    .container.text-centre
+      .row.mx-auto
+        h1.display-4.d-inline-block.pr-lg-5.pt-lg-5.pb-lg-5.pl-lg-5
+          | OPEN
           br
-          a.btn.btn-dark(href='/cheatsheet.html') Check out Extended EOS Icons
-    // Cheatsheet and new icons request ---------------------------------------------------------------
-    .container-fluid
-      .row
-        .col-lg-6.bg-cheatsheet
-          .d-inline-block.align-top.pt-5.pr-3
-            img.d-inline.responsive-image(src='assets/images/landing/rocket1.png')
-          .fixed-rectangle.rounded.d-inline-block.mt-3.mb-3
-          .d-inline-block.align-top.mx-auto.pt-5
-            h4.text-white.pl-5.responsive-text
-              | Do you already know how to put these icons
-              br
-              |                better into practice? We might have some
-              br
-              |                advices for you.
-            a.btn.btn-outline-light.ml-5.mt-1.mb-1.responsive-text(href='/cheatsheet.html') Check out Cheatsheet
-        .col-lg-6.bg-request
-          .d-inline-block.align-top.pt-5.pr-3
-            img.d-inline.responsive-image(src='assets/images/landing/rocket2.png')
-          .fixed-rectangle.rounded.d-inline-block.mt-3
-          .d-inline-block.align-top.mx-auto.pt-5
-            h4.text-white.pl-5.responsive-text
-              | Are you working on an open source project and
-              br
-              |                need some icons? We can design them for you
-              br
-              |                and include them in EOS icons.
-            a.btn.btn-outline-light.ml-5.mt-1.responsive-text.text-white(data-toggle='modal', data-target='#exampleModalCenter') Request new icons
-    // Checkout EOS DS --------------------------------------------------------------------------------
-    .container-fluid.top-gradient.text-white.plane-container
-      .d-inline-block.text-left.mt-sm-4.pt-3.left-padding.plane-index
-        h1 Try EOS Icons with EOS Design System
-        h4.responsive-text We are a part of EOS Design system and together we work like a charm
-      .d-inline-block.text-center.plane-index
-        a.btn.btn-outline-light.ml-lg-5.mb-lg-5.mt-sm-3.responsive-text(href='https://www.eosdesignsystem.com/', target='_blank') Check out EOS DS
-      .d-inline-block.ml-5
-        img.d-inline-block.plane-img(src='assets/images/landing/plane.png')
-    // Contributors section ---------------------------------------------------------------------------
-    .container.padding-vertical-lg
-      h3.text-center
-        | Special thanks to all the superheroes that made it happen
-      .container-flex-row.text-center.padding-top-md
-        a(title='Cynthia Sanchez on twitter', href='https://twitter.com/cyntss', target='_blank')
-          img.contributor-img(src='assets/images/landing/image1.png')
-          p.text-decoration-none.text-dark Cynthia Sanchez
-        a(title='Zvezdana Marjanovic on Linked-In', href='https://www.linkedin.com/in/zvezdanam', target='_blank')
-          img.contributor-img(src='assets/images/landing/image8.png')
-          p.text-decoration-none.text-dark Zvezdana Marjanovic
-        a(title='Manuele Carlini on twitter', href='https://twitter.com/manuelecarlini', target='_blank')
-          img.contributor-img(src='assets/images/landing/image3.png')
-          p.text-decoration-none.text-dark Manuele Carlini
-        a(title='Richa Bhist on Linked-In', href='https://www.linkedin.com/in/richabisht/', target='_blank')
-          img.contributor-img(src='assets/images/landing/image6.png')
-          p.text-decoration-none.text-dark Richa Bhist
-        a(title='Jesus Herman on twitter', href='https://twitter.com/hesusjerman', target='_blank')
-          img.contributor-img(src='assets/images/landing/image4.png')
-          p.text-decoration-none.text-dark Jesus Herman
-        a(title='Sorin Curescu on twitter', href='https://twitter.com/en3sis', target='_blank')
-          img.contributor-img(src='assets/images/landing/image2.png')
-          p.text-decoration-none.text-dark Sorin Curescu
-        a(title='Abhinandan Sharma on Linked-In', href='https://www.linkedin.com/in/abhinandan-sharma-672299150/', target='_blank')
-          img.contributor-img(src='assets/images/landing/image5.png')
-          p.text-decoration-none.text-dark Abhinandan Sharma
-        a(title='Kartikay Bhutani on twitter', href='https://twitter.com/kbhutani0001', target='_blank')
-          img.contributor-img(src='assets/images/landing/image7.png')
-          p.text-decoration-none.text-dark Kartikay Bhutani
-        
-    // Modal
-    #exampleModalCenter.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalCenterTitle', aria-hidden='true')
-      .modal-dialog.modal-dialog-centered(role='document')
-        .modal-content
-          .modal-header
-            h5#exampleModalLongTitle.modal-title Before you send a request, keep following in mind:
-            button.close(type='button', data-dismiss='modal', aria-label='Close')
-              span(aria-hidden='true') x
-          .modal-body
-            ul
-              li EOS-Icons works with Material icons.
-              li
-                | EOS-Icons is made for products in cloud computing, software infrastructure,
-                | provisioning, server management, etc.
-              li
-                | We won't accept icons other than technical fields like for a restaurant or
-                | a dating app, it's not our market.
-          .modal-footer
-            button.btn.btn-secondary(type='button', data-dismiss='modal') Close
-            a.btn.btn-dark(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues/', target='_blank') Send Request
+          | SOURCE
+          br
+          | DNA
+        .fixed-rectangle-inverse.rounded.mt-lg-5.ml-lg-5.mr-lg-5
+        .col.py-3.px-lg-5.pt-lg-5
+          p
+            | EOS icons offers an easily customizable icons for any company or 
+            | project to use. We've created guides that are adjustable and applicable to any open source project.
+            | We appreciate your contribution to EOS icons and look
+            | forward to hearing more about how it helps your
+            | products and projects
+          a.btn.btn-dark(href='https://gitlab.com/SUSE-UIUX/eos-icons', target='_blank') Contribute to EOS Icons
+    .gray-bg
+      // Lot of icons to choose from -------------------------------------------------------------------
+      .container.padding-top-md
+        h1.text-center.pb-lg-5.display-4 Lots of Icons to choose from
+        img.img-fluid.landing-icons-demo(src='assets/images/landing/icons.png')
+      // CSS animated Icons ----------------------------------------------------------------------------
+      .text-center.container
+        h1.text-center.pb-lg-5.pt-lg-5.display-4 CSS Animated Icons
+        .row
+          .col-lg-6
+            img.animated-image.img-fluid(src='assets/images/landing/monitor.png')
+            .animated-icons.mt-lg-5.pt-lg-5.ml-lg-4
+              .icons-item(data-name='loading')
+                i.eos-icons.eos-icon-loading
+                br
+                | loading
+              .icons-item(data-name='in')
+                i#eos-icon-installing.eos-icons.eos-icon-installing.md-48
+                br
+                | installing
+          .col-lg-6.text-left
+            p
+              | EOS icons offers easily customisable animated icons. These
+              | icons use only CSS animations and nothing more, which make
+              | things a lot easier when using these icons in your own projects.
+              | Also, they run on the GPU so the frame rate is much higher
+              | than that of Javascript animations. When it comes to CSS
+              | animations they also have the advantage of not causing
+              | reflows and redraws unlike modifying elements via
+              | Javascript would.
+      // A pixel perfect design process -----------------------------------------------------------------
+      .container.padding-vertical-lg
+        h1.text-center.pb-lg-5.pt-lg-5.display-4 A pixel-perfect design process
+        .row
+          .col-lg-6
+            .row
+              .col-4
+                ol.text-left.pull-right
+                  li
+                    | Stroke terminal
+                  li
+                    | Corner
+                  li
+                    | Counter area
+                  li
+                    | Stroke
+                  li
+                    | Counter stroke
+                  li
+                    | Bounding area
+              .col-8
+                img(src='assets/images/landing/material-icons.png')
+          .col-lg-6
+            p.d-inline-block.text-left
+              | EOS icons were made to coexist with material icons. We
+              | carefully follow material design guidelines which makes
+              | EOS icons indistinguishable from material Icons.
+              | Material Design defines the qualities that can be
+              | expressed by UI regions, surfaces, and components.
+              | Design and strategize how your app is built using
+              | foundations that address design from both a broad
+              | and detailed perspective.
+            br
+            a.btn.btn-dark(href='/cheatsheet.html') Check out Extended EOS Icons
+      // Cheatsheet and new icons request ---------------------------------------------------------------
+      .container-fluid
+        .row
+          .col-lg-6.bg-cheatsheet.d-flex.flex-row.align-items-center
+            .d-inline-block.align-top
+              img.d-inline.responsive-image(src='assets/images/landing/rocket1.png')
+            .fixed-rectangle.rounded.m-3
+            .d-inline-block.align-top.mx-auto
+              h4.text-white.pl-5.responsive-text
+                | Do you already know how to put these icons
+                | better into practice? We might have some
+                | advices for you.
+              a.btn.btn-outline-light.ml-5.mt-1.mb-1(href='/cheatsheet.html') Check out Cheatsheet
+          .col-lg-6.bg-request.d-flex.flex-row.align-items-center
+            .d-inline-block.align-top
+              img.d-inline.responsive-image(src='assets/images/landing/rocket2.png')
+            .fixed-rectangle.rounded.m-3
+            .d-inline-block.align-top.mx-auto
+              p.text-white.pl-5.responsive-text
+                | Are you working on an open source project and
+                | need some icons? We can design them for you
+                | and include them in EOS icons.
+              button.btn.btn-outline-light.ml-5.mt-1(data-toggle='modal', data-target='#exampleModalCenter') Request new icons
+      // Checkout EOS DS --------------------------------------------------------------------------------
+      .container-fluid.top-gradient.text-white.plane-container
+        .d-inline-block.text-left.mt-sm-4.pt-3.left-padding.plane-index
+          h1 Try EOS Icons with EOS Design System
+          h4.responsive-text We are a part of EOS Design system and together we work like a charm
+        .d-inline-block.text-center.plane-index
+          a.btn.btn-outline-light.ml-lg-5.mb-lg-5.mt-sm-3.responsive-text(href='https://www.eosdesignsystem.com/', target='_blank') Check out EOS DS
+        .d-inline-block.ml-5
+          img.d-inline-block.plane-img(src='assets/images/landing/plane.png')
+      // Contributors section ---------------------------------------------------------------------------
+      .container.padding-vertical-lg
+        h3.text-center
+          | Special thanks to all the superheroes that made it happen
+        .container-flex-row.text-center.padding-top-md
+          a(title='Cynthia Sanchez on twitter', href='https://twitter.com/cyntss', target='_blank')
+            img.contributor-img(src='assets/images/landing/image1.png')
+            p.text-decoration-none.text-dark Cynthia Sanchez
+          a(title='Zvezdana Marjanovic on Linked-In', href='https://www.linkedin.com/in/zvezdanam', target='_blank')
+            img.contributor-img(src='assets/images/landing/image8.png')
+            p.text-decoration-none.text-dark Zvezdana Marjanovic
+          a(title='Manuele Carlini on twitter', href='https://twitter.com/manuelecarlini', target='_blank')
+            img.contributor-img(src='assets/images/landing/image3.png')
+            p.text-decoration-none.text-dark Manuele Carlini
+          a(title='Richa Bhist on Linked-In', href='https://www.linkedin.com/in/richabisht/', target='_blank')
+            img.contributor-img(src='assets/images/landing/image6.png')
+            p.text-decoration-none.text-dark Richa Bhist
+          a(title='Jesus Herman on twitter', href='https://twitter.com/hesusjerman', target='_blank')
+            img.contributor-img(src='assets/images/landing/image4.png')
+            p.text-decoration-none.text-dark Jesus Herman
+          a(title='Sorin Curescu on twitter', href='https://twitter.com/en3sis', target='_blank')
+            img.contributor-img(src='assets/images/landing/image2.png')
+            p.text-decoration-none.text-dark Sorin Curescu
+          a(title='Abhinandan Sharma on Linked-In', href='https://www.linkedin.com/in/abhinandan-sharma-672299150/', target='_blank')
+            img.contributor-img(src='assets/images/landing/image5.png')
+            p.text-decoration-none.text-dark Abhinandan Sharma
+          a(title='Kartikay Bhutani on twitter', href='https://twitter.com/kbhutani0001', target='_blank')
+            img.contributor-img(src='assets/images/landing/image7.png')
+            p.text-decoration-none.text-dark Kartikay Bhutani
+          
+  // Modal
+  #exampleModalCenter.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalCenter', aria-hidden='true')
+    .modal-dialog.modal-dialog-centered(role='document')
+      .modal-content
+        .modal-header
+          h5#exampleModalLongTitle.modal-title Before you send a request, keep following in mind:
+          button.close(type='button', data-dismiss='modal', aria-label='Close')
+            span(aria-hidden='true') x
+        .modal-body
+          ul
+            li EOS-Icons works with Material icons.
+            li
+              | EOS-Icons is made for products in cloud computing, software infrastructure,
+              | provisioning, server management, etc.
+            li
+              | We won't accept icons other than technical fields like for a restaurant or
+              | a dating app, it's not our goal.
+        .modal-footer
+          button.btn.btn-secondary(type='button', data-dismiss='modal') Close
+          a.btn.btn-dark(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues/new?issue%5Bassignee_id%5D=&issue%5Bmilestone_id%5D=', target='_blank') Send Request
